# mc_100_days

./: .gitignore  LICENSE  README.md  day_003_set_05.ipynb
hf_vision/: person_detection.py  pyproject.toml
hf_vision/ddpm_hf/: ddpm.ipynb  utils.py  visualization.py
jax_exercises/: README.md  day_000.ipynb  day_001_set_02.ipynb  day_001_set_03.ipynb  day_002_set_04.ipynb  day_003_set_05.ipynb  day_004_set_06.ipynb  day_006.ipynb  day_007.ipynb  day_008.ipynb  day_009.ipynb  day_010.ipynb  day_011.ipynb  day_012.py  day_013.py  day_014.ipynb  day_015.py  day_016.py  day_017.py  day_018.py  day_019.ipynb  day_020.ipynb  pyproject.toml
leetcode/: LC2016_MaxDiff.py  LC3330_FindOriginal.py
llms-from-scratch/: pyproject.toml
