[project]
name = "hf-vision"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.0",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
]
