[project]
name = "jax_exercises"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.6",
    "jax[cuda12]>=0.6.1",
    "jaxlib>=0.6.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.9",
    "torch>=2.0.1",
    "tqdm>=4.67.1",
]
